--- a/notes.tex
+++ b/notes.tex
@@ -201,7 +201,7 @@
       \[ \frac{x-1}{3} = \frac{y+2}{7}, z=6 \]
     \end{enumerate}
     \begin{itemize}
-      \item point to line distance: use paralleogram area trick
+      \item point to line distance: use parallelogram area trick
     \end{itemize}
 
     Planes
@@ -210,7 +210,7 @@
       
       $(\vec{r}-\vec{r_0})\cdot \vec{n} = 0$ \\
       eg $(\left<x,y,z\right>-\left<1,0,1\right>) \cdot \left<1,2,-3\right> = 0$
-      \item Scalar Equation, "General" Form
+      \item Scalar Equation, ``General'' Form
       
       $ax +by +cz +d = 0$
     \end{enumerate}
@@ -808,7 +808,7 @@
       \item let $S$ be an oriented smooth surface with un norm vec $\vec{N}$. suppose boundry of $S$ is a simple closed curve $C$. orientation of $S$ induces positive orientation of $C$ if, walking in positive dir of $C$ with head pointed $\vec{N}$, surface is on left.
       \item Stokes': let $S$ be a piecewise smooth oriented surface with a boundary, a simple closed curve $C$ with positive orientation. 
       \[ \oint_C \vec{F}\cdot d\vec{r} = \iint_S \text{curl}\vec{F}\cdot d\vec{S} \]
-      \item what the FUCK is surface independence (p787)
+      \item surface independence
     \end{itemize}
     Divergence Theorem
     \begin{itemize}
@@ -867,7 +867,7 @@
   \begin{itemize}
     \item also what the FUCK is positive orientation for stokes surfaces
   \end{itemize}
-  \item divergence thrm: $\oint_C \vec{F}\cdot\vec{N}ds = \iint_D P_x+Q_ydA=\iint_D \text{div}\vec{F}dA$
+  \item divergence thrm: $\iiint_E \text{div}\vec{F}dV = \iint_S \vec{F}\cdot d\vec{S}$
   
   
   
@@ -890,6 +890,9 @@
 \newpage
 \addsection{Appendix} 
 Sorted newest first
+
+\subsection*{evaulating limits}
+factor and try to naiively solve for the limit. doesn't work? double path test. for limit approaching $(a,b)$, try $x=a$, $y=b$, $x=y$ (works more often than I think), matching exponents, and factoring even harder. don't forget normal limit rules like how $\lim_{x\rightarrow 0}\frac{x^2-x^6}{x^4}$ tends toward $\infty$.
 
 \subsection*{centers of mass, moments of inertia}
 think of moments about axes like how much a lamina wants to rotate about the axis. then the moment / the mass is simply the center of mass. uhh, trust.
